# ansible_git_stats

./: .gitignore  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
ansible_git_stats/: _i18n.py  config.py  git_stats.py  opts.py
etc/: ansible_git_stats.conf.sample
etc/oslo-config-generator/: ansible_git_stats.conf
