[metadata]
name = ansible_git_stats
summary = Kubernetes integration with OpenStack networking
description-file =
    README.rst
author = Daniel Mellado
author-email = dmellado@redhat.com
classifier =
    Environment :: Ansible
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[entry_points]
oslo.config.opts =
    ansible_git_stats = ansible_git_stats.opts:list_opts
console_scripts =
    ansible_git_stats = ansible_git_stats.git_stats:main

[files]
packages =
    ansible_git_stats
